--- a/style.css
+++ b/style.css
@@ -1,17 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Amaranth:ital,wght@1,700&family=Roboto:wght@100;400;900&display=swap');
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+*{ padding: 0; margin: 0;box-sizing: border-box;}
+
+:root{/* Definimos variables para usar en cualquier momento de la pagina */
+    --theme-color: white;
+    --primary-color:#27668C;
+    --secondary-color:#f7c331;
+    --text-color-inverse:white;
+    --text-color:black;
+    --navbar-shallow-color:#e5e5e5;
+    --menu-mobile-banckground-color:#3a4460;
 }
 
-body{
-    font-family: 'Roboto', sans-serif;
-}
+body{font-family: 'Roboto', sans-serif;}
 
 /* Menu */
-
 .menu .logo{
     color: white;
     font-size: 25px;
@@ -19,85 +22,69 @@ body{
     font-weight: 900;
     margin-left: 20px;
 }
-.menu ul{
-    float: right;
-    margin-right: 10px;
-}
-.menu ul li{
-    display: inline-block;
-    margin: 30px 15px;
-}
-.menu ul li a{
-    font-size: 16px;
-    padding: 8px 6px;
-    text-decoration: none;
-    color: white;
-
-}
-.menu ul li a:hover{
-    color: yellow;
-}
-.menu{
-    background-color: black;
-}
-
+.menu ul{float: right; margin-right: 10px;}
+.menu ul li{display: inline-block; margin: 30px 15px;}
+.menu ul li a{ font-size: 16px; padding: 8px 6px; text-decoration: none; color: white;}
+.menu ul li a:hover{ color: yellow;}
+.menu{ background-color: black;}
 /* Banner */
 .banner{
     width: 100%;
     position: relative;
-    height: 100vh;
+    height: 70vh;
     background: url('imagenes/silla.jpg') no-repeat center center/cover; 
     left: 0; top: 0;
     z-index: 1;
+    padding: 5px 0 0 40px;
 }
-
 .banner .texto_banner{
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 20px;
     min-width: 40%;
     min-height: 20%;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
 }
-
 .banner .texto_banner p, 
 .banner .texto_banner h1{
     color: white;
-    margin: 0;
+    margin: 40px;
     text-align: center;
 }
-
-.banner .texto_banner h1{
-    font-size: 28px;
-}
-
-/* Quienes somos */
-.nosotros{
-    padding: 10px 100px;
-    text-align: center;
-    margin: 40px 0px;
-}
-.titulo{
+.banner .texto_banner h1{ font-size: 40px;}
+.banner .texto_banner p{ font-size: 25px;}
+.titulo{ /* Unifica en estilo y tamaño todos la clase "titulo" del sitio */
     font-family: "Amaranth", sans-serif;
     letter-spacing: 1px;
     word-spacing: 3px;
     font-size: 40px;
     text-align: center;
 }
-
-.linea{
+.linea{ /* Unifica en estilo y tamaño todos la clase "linea" del sitio */
     width: 200px;
     height: 6px;
     background-color: #27668C;
-    margin: 10px auto;
+    margin: 10px auto 10px;
     border-radius: 5px;
     border-bottom: 30px;
 }
+iframe { /* Unifica en estilo y tamaño todos los iframe del sitio */
+    border-radius: 10px;
+    width: 75%;
+    height: 20em;
+    margin: 1em;
+}
 
-.boton{
+/* Quienes somos */
+.nosotros{ padding: 10px 300px; text-align: left; margin: 40px 0px;}
+.nosotros p{margin: 1em 1em 1em 1em;}
+.nosotros img{margin: 0 1em;}
+.nosotros strong{font-weight: bold;}
+.nosotros em{font-style: italic;}
+.nosotros .utensilios{width: 120px; float: left; border-radius: 5px;}
+.nosotros .boton{
     background-color: #27668C;
     display: block;
     width: 200px;
@@ -112,80 +99,167 @@ body{
     color: white;
     margin-bottom: 20px;
 }
+.nosotros .boton:hover{background-color: #27668C; box-shadow: 5px 5px 5px gray;}
 
-.boton:hover{
-    background-color: #27668C;
-    box-shadow: 5px 5px 5px gray;
-}
+/* Ubicacion y mapa */
+.ubicacion{ padding: 2em; background: linear-gradient(orange 25%, #888888); text-align: center;}
+.ubicacion p{margin: 0 0 1em;}
 
-
-/* Servicios */
-.servicios{
-    margin: 50px 70px;
-}
-.servicios .contenido{
+/* Diferenciales */
+.diferenciales{padding: 1em; background: #888888;}
+.diferenciales .contenido{
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    gap: 20px;
+    grid-template-columns: 1fr 1fr;
+    width: 100%;
+    height: auto;
+    place-items: center; 
 }
-.imagen img{
+.diferenciales .contenido .lista-diferenciales{
     width: 90%;
     height: 250px;
-    border-radius: 20px;
-    margin: 0 auto;
-    display: block;
-} 
-image p{
-    text-align: center;
-    font-weight: bolder;
-    margin: 20px 0;
-}
-.imagen .boton2{
-    background-color: #27668C;
-    width: 100px;
     padding: 5px;
-    color: white;
+    display: grid;
+    place-items: center;
+    justify-items: right;
+}
+.diferenciales .contenido .imagen-diferencial{
+    width: 90%;
+    height: 250px;
+    padding: 5px;
+    display: grid;
+    place-items: center;
+    justify-items: left;
+    text-align: center;
+}
+.diferenciales .contenido .imagen-diferencial img{
+    width: 200px;
+    height: 150px;
     border-radius: 10px;
-    text-align: center;
-    margin: auto;
+    transition: 150ms;
+    box-shadow: 5px 5px 100px olive;
 }
-.imagen .boton2:hover{
-    background-color: #27668C;
-    box-shadow: 5px 5px 5px gray;
-}
+.lista-diferenciales .items{line-height: 2;}
+.lista-diferenciales .items:first-child {font-weight: bold;}
+.lista-diferenciales .items:before{content: "🟂"; margin-right: 5px;}
+.lista-diferenciales .imagen-diferencial-1:hover{opacity: 0.33;}
 
-.redes{
-    background-color: black;
-    color: white;
-    height: 100px;
-    text-align: center;
-    padding: 20px;
-}
+/* Video */
+.video{background:#FFFFFF; text-align: center; padding: 4em;}
 
-.espacio{
-    margin: 15px 15px;
+/* Servicios Barberia */
+.contenido{
+    display: grid;
+    grid-template-columns: auto auto auto auto auto;
+    gap: 20px;
+    place-items: center;
+    justify-self: center;
+    width: 100%;
+    margin:75px 0px 75px 0;
 }
+.contenido .imagen1,
+.contenido .imagen2,
+.contenido .imagen3,
+.contenido .imagen4,
+.contenido .imagen5{
+    border-radius: 20px;
+    text-align: center;
+    width: 200px;
+    height: 305px;
+    margin: 1px auto;
+    display: block;
+}
+.contenido .imagen1{ background: url('imagenes/cabello-fondo.jpg') no-repeat center center/cover; opacity: 0.7;}
+.contenido .imagen2{ background: url('imagenes/bigote-fondo.jpg') no-repeat center center/cover; opacity: 0.7;}
+.contenido .imagen3{ background: url('imagenes/toque-femenino-fondo.jpg') no-repeat center center/cover; opacity: 0.7;}
+.contenido .imagen4{ background: url('imagenes/barba-fondo.jpg') no-repeat center center/cover; opacity: 0.7;}
+.contenido .imagen5{ background: url('imagenes/cabello+barba-fondo.jpg') no-repeat center center/cover; opacity: 0.7;}
+.contenido .img-cabello{ width: 150px; height: 150px; border-radius: 10px; background-color: rgba(0, 0, 0, 0.8);}
+.contenido #textos{ padding: 0.5em;}
+.contenido h2,  /*Aqui detectamos que para que tome unicamente los estilos para la seccion de servicios se deben manejar de la forma como estan*/
+.contenido p{   /*de otra manera los cambios surtiran efectos en etiquetas h2 y p de otras secciones lo cual no es adecuado*/
+    font-weight: bold;
+    color: white
+}
+.contenido .producto-descripcion{ font-size: 15px; height: 4em;}
+.producto-precio{ background: orange; text-align: right; margin: 7px; color: #888888;}
+.contenido .boton2{ background-color: #27668C; width: 100px; padding: 5px; color: white; border-radius: 10px; margin: auto;}
+
+/* Contacto */
+.formulario-contacto{ margin: 50px 50px;}
+.contacto {
+    background-color: rgba(0, 0, 0, 0.4);
+    border-radius: 14px;
+    display: grid;
+    gap: 20px;
+    padding: 25px;
+    grid-template:
+    "contacto-titulo    contacto-titulo"
+    "contacto-detalle   contacto-formulario"
+    "contacto-horario   contacto-formulario" /
+         1fr                   1fr;  /*las dos columnas quedarian de igual ancho*/
+}
+.contacto > *{ border-radius: 4px; padding: 5px; color: white;}
+.contacto-titulo { grid-area: contacto-titulo;}
+.contacto-detalle {
+    grid-area: contacto-detalle;
+    display: flex;
+    flex-direction: column;
+    justify-items: left;
+}
+.contacto-etiqueta{ font-weight: bold;}
+.contacto-formulario {
+    grid-area: contacto-formulario;
+    display: flex;
+    flex-direction: column;
+    justify-items: left;
+}
+.contacto-formulario input,
+.contacto-formulario textarea {
+    border-radius: 7px;
+    border: none;
+    height: 30px;
+}
+.contacto-formulario textarea {height: auto; resize: vertical;}
+.contacto-formulario-grupo,
+.contacto-detalle-grupo{
+    display: flex;
+    flex-direction: column;
+    justify-items: left;
+    margin: 5px;
+}
+.contacto-horario { grid-area: contacto-horario;}
+/* Tabla */
+table{
+    border-collapse: collapse;
+    border-radius: 0.3em;
+    overflow: hidden;
+    justify-self: top;
+}
+thead{ border-collapse:collapse; background-color: rgba(247, 195, 49, 0.7);}
+thead th{ vertical-align: middle;}
+td{ padding: 5px;}
+tbody tr{cursor: pointer;}
+tbody tr:hover{ background: rgba(247, 195, 49, 0.3);}
+.contacto-enviar {
+    width: 50%;
+    height: 50px;
+    background-color: var(--secondary-color);
+    border-radius: 7px;
+    color: var(--text-color-inverse);
+    border: 1px solid var(--theme-color);
+    font-size: 20px;
+    cursor: pointer;
+    place-self: center;
+}
+.contacto-enviar:hover { box-shadow: 0 0 14px var(--secondary-color);}
+/* Fin Contato */
 
 /* Media Query */
 @media(max-width: 700px) {
-    .hamburger{
-        width: 30px;
-        position: absolute;
-        top: 40px;
-        transform: translateY(-50%);
-    }
-    .hamburger span{ 
-        margin-bottom: 3px;
-        background-color: white;
-        display: block;
-        height: 3px;
-    }
-    .menu .logo{
-        margin-left: 50px;
-    }
-    menu{
-        position: relative;
-    }
+    .hamburger{ width: 30px; position: absolute; top: 40px; transform: translateY(-50%);}
+    .hamburger span{ margin-bottom: 3px; background-color: white; display: block; height: 3px;}
+    .menu .logo{ margin-left: 50px;}
+    menu{ position: relative;}
     nav ul{
         float: none;
         width: 300px;
@@ -200,17 +274,9 @@ image p{
         left: -100%;     
         z-index: 2;
     }
-    .menu ul li{
-        display: block;
-        float: none;
-    }
-    .menu ul li a{
-        font-size: 18px;
-        padding: 10px 40px;
-    }
-    .open{
-        left: 0;
-    }
+    .menu ul li{ display: block; float: none;}
+    .menu ul li a{ font-size: 18px; padding: 10px 40px;}
+    .open{ left: 0;}
     .close{
         display: block;
         position: absolute;
@@ -222,16 +288,48 @@ image p{
         font-size: 30px;
         cursor: pointer;
     }
-}
-
-@media(max-width: 900px) {
-    .servicios .contenido{
-        grid-template-columns: auto auto;
+    .contacto{
+        display: grid;
+        grid-template:
+        "contacto-titulo        contacto-titulo"
+        "contacto-detalle       contacto-detalle"
+        "contacto-formulario    contacto-formulario"
+        "contacto-horario       contacto-horario";
     }
+    table{ margin: 0px auto;}
 }
-
+@media(max-width: 1024px) {
+    .servicios .contenido{ grid-template-columns: auto auto;}
+    .nosotros{ padding: 10px 100px;}
+    .contenido{ grid-template-columns: auto auto;}
+    .grid-container{ grid-template-columns: auto auto; }
+    /* Seccion Contactenos */
+    .contacto{
+        display: block;
+        /* revisar pues no creo que sea necesario pues el grid se presenta solo con dos columnas */
+        /* Asi como el bloque anterior podemos cambiar las dimensiones de los elementos como se requiera a los dispositivos moviles o de consulta */
+    }
+    .contacto-titulo,
+    .contacto-detalle,
+    .contacto-formulario{
+        margin: 20px;
+    }
+    table{ margin: 0px auto; }
+}
 @media(max-width: 450px) {
-    .servicios .contenido{
-        grid-template-columns: auto;
+    .nosotros{ padding: 10px 10px; }
+    .servicios .contenido{ grid-template-columns: auto; }
+    .diferenciales .contenido{ grid-template-columns: auto;}
+    .contenido .imagen-diferencial{place-items: center;}
+    .contenido{ grid-template-columns: auto;}
+    .grid-container{ grid-template-columns: auto;}    
+    .contacto{
+        display: grid;
+        grid-template:
+        "contacto-titulo        contacto-titulo"
+        "contacto-detalle       contacto-detalle"
+        "contacto-formulario    contacto-formulario"
+        "contacto-horario       contacto-horario";
     }
+    table{ margin: 0px auto; }
 }
