--- a/prueba2.css
+++ b/prueba2.css
@@ -11,10 +11,28 @@
     --navbar-shallow-color:#e5e5e5;
     --menu-mobile-banckground-color:#3a4460;
 }
+
 body{
     font-family: 'Roboto', sans-serif;
+    /* display: flex;
+    flex-direction: column;
+    place-content: center; */
 }
-/*  */
+
+main{
+    /* place-items: center; */
+    /* justify-content: center; */
+    /* align-items: center; */
+    /* justify-items: center; */
+    /* justify-content: left; */
+    /* text-align: left; */
+    /* margin: 0 10%; */
+
+    /* margin: 0 clamp(1.3rem, 1vw + 0.9rem, 3rem);; */
+    /* padding: clamp(1em, 4vw, 5em); */
+    /* max-width: 400px; */
+}
+
 /* Menu */
 .menu .logo{
     color: white;
@@ -28,12 +46,11 @@ body{
 .menu ul li a{ font-size: 16px; padding: 8px 6px; text-decoration: none; color: white;}
 .menu ul li a:hover{ color: yellow;}
 .menu{ background-color: black;}
-/*  */
 /* Banner */
 .banner{
     width: 100%;
     position: relative;
-    height: 33vh;
+    height: 70vh;
     background: url('imagenes/silla.jpg') no-repeat center center/cover; 
     left: 0; top: 0;
     z-index: 1;
@@ -57,18 +74,12 @@ body{
 }
 .banner .texto_banner h1{ font-size: 40px;}
 .banner .texto_banner p{ font-size: 25px;}
-/*  */
-/* Generales */
 .titulo{ /* Unifica en estilo y tamaño todos la clase "titulo" del sitio */
     font-family: "Amaranth", sans-serif;
     letter-spacing: 1px;
     word-spacing: 3px;
-    font-size: clamp(1.5rem, 2vw + 1rem, 5rem);
+    font-size: 40px;
     text-align: center;
-    padding: 1rem;
-    display: flex;
-    align-items: end;
-    justify-content: center;
 }
 .linea{ /* Unifica en estilo y tamaño todos la clase "linea" del sitio */
     width: 200px;
@@ -78,20 +89,40 @@ body{
     border-radius: 5px;
     border-bottom: 30px;
     /* margin-bottom: 2em; */
-    margin-bottom: 1rem;
 }
-/*  */
+iframe { /* Unifica en estilo y tamaño todos los iframe del sitio */
+    /* border-radius: 10px; */
+    /* width: 75%; */
+    /* height: 20em; */
+    
+    /* max-width: 80%;
+    height: 20em; */
+}
+
+
 /* Quienes somos */
-.nosotros{     
+.nosotros{ 
+    /* padding: 10px;  */
+    /* text-align: left;  */
+    /* margin: 20px 0px; */
+    /* width: 75%; */
+    /* padding: 5%; */
     text-align: left;
+    /* margin: 2em 0; */
+    /* margin: 0 clamp(1vw - 1.3rem, 4em, 3rem); */
+    /* 1vw + 0.9rem */
+    /* margin: 0 30%; */
     margin: 0 10%;
     padding: 30px 0 30px 0;
-    /* background: aquamarine; */
 }
+
 .nosotros p{
     margin: 1em 1em 1em 1em;
     text-align: justify; 
-    font-size: clamp(0.9em, 1vw + 0.3em, 3em);
+    /* display: flex;
+    flex-direction: column;
+    place-content: center;
+    text-align: justify; */
 }
 .nosotros img{
     margin: 0 1em;
@@ -120,7 +151,7 @@ body{
     margin-bottom: 20px;
 }
 .nosotros .boton:hover{background-color: #27668C; box-shadow: 5px 5px 5px gray;}
-/*  */
+
 /* Ubicacion y mapa */
 .ubicacion{ 
     /* padding: 0em;  */
@@ -128,39 +159,33 @@ body{
     text-align: center;
     padding: 30px 0 30px 0;
 }
-.ubicacion p{
-    margin: 10px 10px 1em;
-}
+.ubicacion p{margin: 10px 10px 1em;}
+
 .cs-ubicacion-iframe{
     border-radius: 20px;
     max-width: 80%;
     height: 20em;
     margin: 30px 0;
 }
-/*  */
+
+
 /* Diferenciales */
 .cs-diferente{
     background: #888888;
     padding: 10px 0 30px 0;
-    /* background: rebeccapurple; */
 }
 .cs-diferente-contenido{
-    /* width: 80%; */
+    width: 100%;
     display: flex;
-    place-self: center;
-    /* gap: 1em; */
-    max-width: 100%;
-    /* background: #27668C; */
-    margin: 0 10%;
+    gap: 1em;
 }
 .cs-diferente-lista{
     width: 100%;
-    /* display: flex; */
-    /* justify-content: flex-end; */
-    /* align-items: center; */
-    /* place-self: center; */
-    font-size: clamp(1em, 1vw + 0.1em, 3em);
-    background: #888888;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    /* background-color: red; */
+    font-size: clamp(0.9rem, 1vw, 3rem);
 }
 .cs-items{
     line-height: 1.5;
@@ -169,27 +194,29 @@ body{
 .cs-items:before{
     content: "🟂"; 
 }
-.cs-diferente-imagen{    
-    width: 33vw;
-    max-width: 200px;
-    min-width: 100px;
+.cs-diferente-imagen{
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    /* background-color: rosybrown; */
     text-align: center;
-    display: block;
-    margin: auto;
-    /* background: #f7c331; */
 }
 .cs-diferente-figure{
-    width: 100%;    
+    width: 150px;
+    height: 150px;
     border-radius: 10px;
     transition: 150ms;
     box-shadow: 5px 5px 100px olive;
-    
 }
 .cs-diferente-figure:hover{opacity: 0.33;}
-/*  */
+
+
 /* Video */
 .cs-diferente-video{
-    text-align: center;
+    /* background:#4b3434;  */
+    text-align: center; 
+    /* padding: 4em; */
 }
 .cs-diferente-iframe{
     border-radius: 20px;
@@ -198,21 +225,22 @@ body{
     width: 100%;
     margin: 30px 0;
 }
-/*  */
+
+
 /* Servicios Barberia */
 .servicios{
-    padding: 10px;
-    margin: 0;
-    padding: 0;
-    background: linear-gradient(white 50%, #f7c331);
+    margin-top: 30px;
+    /* padding: 0 30px 30px 0; */
 }
 .contenido{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(max(200px, 30%), 1fr));
+    grid-template-columns: auto auto auto auto auto;
     gap: 20px;
     place-items: center;
     justify-self: center;
-    margin: 0 10%;
+    width: 100%;
+    margin:50px 0px 75px 0px;
+
 }
 .contenido .imagen1,
 .contenido .imagen2,
@@ -239,77 +267,56 @@ body{
     color: white
 }
 .contenido .producto-descripcion{ font-size: 15px; height: 4em;}
-.producto-precio{ 
-    background: orange; 
-    text-align: right; 
-    margin: 7px; 
-    color: #888888;}
-.contenido .boton2{ 
-    background-color: #27668C; 
-    width: 100px; 
-    padding: 5px; 
-    color: white; 
-    border-radius: 10px; 
-    margin: auto;
-}
-/*  */
+.producto-precio{ background: orange; text-align: right; margin: 7px; color: #888888;}
+.contenido .boton2{ background-color: #27668C; width: 100px; padding: 5px; color: white; border-radius: 10px; margin: auto;}
+
+
 /* Contacto */
-.formulario-contacto{
-    background-color: #f7c331;
-    padding-bottom: 1em;
-    padding-top: 2em;
-} 
-.contacto-etiqueta{ 
-    font-weight: bold;
-    padding-bottom: 5px;
+.formulario-contacto{ 
+    width: 100%;
+    background-color: rebeccapurple;
+    margin: 30px 0 30px 0;
 }
-  .contacto-formulario textarea {
-    height: auto; 
-    resize: vertical;
-    background-color: #F2F3F4 ;
-    padding: 1em;
-}
-.contacto-formulario input {
-    background-color: #F2F3F4 ;
-    padding: 1em;
-}
-.contacto-formulario-grupo{
-    padding: 5px;
-}
-.contacto {         
-    border-radius: 1em;
+.contacto {
+    width: 80%;
+    background-color: red;
+    border-radius: 14px;
+    
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(max(300px, 30%), 1fr));
-    gap: 2em;     
-    margin: 0 10%;
-  }
-.contacto > *{ 
-    color: #F8F9F9;     
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-rows: repeat (auto-fit, minmax (150px, 1fr));
+   
+    /* margin: auto; */
 }
-.contacto-detalle {      
-     padding: 2em;
-    border: 2px solid #F8F9F9;
-    border-radius: 1em;
-     font-size: clamp(1em, 1vw + 0.3em, 3em);   
+.contacto > *{ border-radius: 4px; padding: 5px; color: white;}
+.contacto-titulo { 
+    
+    background-color: blue;
 }
-.contacto-formulario {     
-    padding: 2em;
-    border: 2px solid #F8F9F9;
-    border-radius: 1em;
-    grid-row: span 2 / span 2; 
+.contacto-detalle {
+    
+    /* padding: 0 1.5em 0 3em; */
+    padding: 1em 3em 1em 1.5em;
+    background-color: gray;
+
+    /* grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 1; */
+    
+
 }
-.contacto-horario {  
-    padding-bottom: 1em;
-    border: 2px solid #F8F9F9;
-    border-radius: 1em;
-}
-.contacto-detalle-grupo{
-    padding: .5em;
-}
-.contacto-formulario-grupo{
-    display: flex;
-    flex-direction: column;
-    justify-content:space-between;
+.contacto-etiqueta{ font-weight: bold;}
+.contacto-formulario {
+   
+    
+    padding: 1em 3em 1em 1.5em;
+    background-color: #f7c331;
+
+    /* grid-column-start: 2;
+    grid-column-end: 4;
+    grid-row-start: 1;
+    grid-row-end: 3; */
 }
 .contacto-formulario input,
 .contacto-formulario textarea {
@@ -317,12 +324,40 @@ body{
     border: none;  /*revisar este bloque con el siguiente al parecer llamamos al mismo elemento textarea*/
     height: 30px;
 }
-.contacto-formulario textarea {height: auto; resize: vertical;}  
-.cs-div-contacto-enviar{
-    text-align: center;
+.contacto-formulario textarea {height: auto; resize: vertical;}
+.contacto-formulario-grupo,
+.contacto-detalle-grupo{
+    
+    margin: 5px;
+    /* padding: 0 3em; */
+    /* padding: 0 1.5em 0 3em; */
 }
-.cs-btn-contacto-enviar{
-    margin-top: 10px;
+.contacto-horario { 
+    
+    /* margin: auto; */
+    padding-bottom: 1em;
+    background: rgb(51, 146, 153);
+    /* margin: 0 auto; */
+
+    /* grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 2; */
+}
+/* Tabla */
+table{
+    border-collapse: collapse;
+    border-radius: 0.3em;
+    overflow: hidden;
+    justify-self: top;
+    background-color: palegoldenrod;
+}
+thead{ border-collapse:collapse; background-color: rgba(247, 195, 49, 0.7);}
+thead th{ vertical-align: middle;}
+td{ padding: 5px;}
+tbody tr{cursor: pointer;}
+tbody tr:hover{ background: rgba(247, 195, 49, 0.3);}
+.contacto-enviar {
     width: 50%;
     height: 50px;
     background-color: var(--secondary-color);
@@ -331,36 +366,13 @@ body{
     border: 1px solid var(--theme-color);
     font-size: 20px;
     cursor: pointer;
+    place-self: center;
 }
-.cs-btn-contacto-enviar:hover { box-shadow: 0 0 14px var(--primary-color)}
-/*  */
-/* Tabla */
-table{
-    border-collapse: collapse;
-    border-radius: 0.3em;
-    overflow: hidden;
-    margin: auto;
-    width: 300px;
-    height: 5em;
-    font-size: clamp(1em, 1vw + 0.1em, 3em);
-}
-thead{ border-collapse:collapse; 
-    height: 2em;
-}
-thead th{ 
-    vertical-align: middle;
-}
-td{ 
-    padding: 5px;
-}
-tbody tr{
-    cursor: pointer;
-    
-}
-tbody tr:hover{ 
-    background: rgba(15, 15, 14, 0.3);
-}
+.contacto-enviar:hover { box-shadow: 0 0 14px var(--secondary-color);}
 /* Fin Contato */
+
+
+
 
 /* FOOTER */
 footer{text-align: center; background: url(imagenes/bg.jpg); padding: 40px;
@@ -369,29 +381,28 @@ footer{text-align: center; background: url(imagenes/bg.jpg); padding: 40px;
 .copyright{color:#FFFFFF; font-size: 13px; margin: 20px;}
 /* FIN Footer */
 
-
 /* Media Query */
-@media(max-width: 720px) {
+/* @media(max-width: 720px) {
     .hamburger{ width: 30px; position: absolute; top: 40px; transform: translateY(-50%);}
     .hamburger span{ margin-bottom: 3px; background-color: white; display: block; height: 3px;}
     .menu .logo{ margin-left: 50px;}
     menu{ position: relative;}
     nav ul{
         float: none;
-        width: 175px;
+        width: 300px;
         padding: 0;
         position: fixed;
         top: 0;
         bottom: 0;
         background-color: black;
         margin: 0px;
-        padding-top: 30px;
+        padding-top: 60px;
         transition: 1s;
         left: -100%;     
         z-index: 2;
     }
     .menu ul li{ display: block; float: none;}
-    .menu ul li a{ font-size: 18px; padding: 10px 5px;}
+    .menu ul li a{ font-size: 18px; padding: 10px 40px;}
     .open{ left: 0;}
     .close{
         display: block;
@@ -404,29 +415,88 @@ footer{text-align: center; background: url(imagenes/bg.jpg); padding: 40px;
         font-size: 30px;
         cursor: pointer;
     }
-}
+    .contacto{
+        display: grid;
+        grid-template:
+        "contacto-titulo        contacto-titulo"
+        "contacto-detalle       contacto-detalle"
+        "contacto-formulario    contacto-formulario"
+        "contacto-horario       contacto-horario";
+    }
+    table{ margin: 0px auto;}
+} */
 
-@media(max-width: 480px) {
+
+/* @media(max-width: 1024px) {
+    .servicios .contenido{ grid-template-columns: auto auto;}
+    .nosotros{ 
+        /* padding: 10px 100px; 
+    }
+    .contenido{ grid-template-columns: auto auto;}
+    .grid-container{ grid-template-columns: auto auto; }
+    /* Seccion Contactenos 
+    .contacto{
+        display: block;
+        /* revisar pues no creo que sea necesario pues el grid se presenta solo con dos columnas 
+        /* Asi como el bloque anterior podemos cambiar las dimensiones de los elementos como se requiera a los dispositivos moviles o de consulta 
+    }
+    .contacto-titulo,
+    .contacto-detalle,
+    .contacto-formulario{
+        margin: 20px;
+    }
+    table{ margin: 0px auto; }
+} */
+
+/* @media(max-width: 450px) {
+    .nosotros{ padding: 10px 10px; }
+    .servicios .contenido{ grid-template-columns: auto; }
+    .diferenciales .contenido{ grid-template-columns: auto;}
+    .contenido .imagen-diferencial{place-items: center;}
+    .contenido{ grid-template-columns: auto;}
+    .grid-container{ grid-template-columns: auto;}    
+    .contacto{
+        display: grid;
+        grid-template:
+        "contacto-titulo        contacto-titulo"
+        "contacto-detalle       contacto-detalle"
+        "contacto-formulario    contacto-formulario"
+        "contacto-horario       contacto-horario";
+    }
+    table{ margin: 0px auto; }
+} */
+
+@media(max-width: 720px) {
     
+    .contacto{
+        display: grid;
+        grid-template:
+        "contacto-titulo        contacto-titulo"
+        "contacto-detalle       contacto-detalle"
+        "contacto-formulario    contacto-formulario"
+        "contacto-horario       contacto-horario" /
+              1fr                     1fr ;
+    }
+    /*  */
     /* .nosotros{
         margin: 0 1%;
     }
-    .cs-diferente-contenido{        
+    .cs-diferente-contenido{
         display: flex;
-        flex-direction: column;       
+        flex-direction: column;
         margin-top: 2em;
     }
     .cs-diferente-lista{
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;    
+        align-items: center;
     }
     .cs-diferente-imagen{
         width: 100%;
         display: flex;
         justify-content: center;
-        align-items: center;        
+        align-items: center;
     }
     .cs-diferente-figure{
         width: 200px;
@@ -434,7 +504,52 @@ footer{text-align: center; background: url(imagenes/bg.jpg); padding: 40px;
     }
     figure{
         text-align: center;
+    }
+*/
+    /* .contacto-detalle,
+    .contacto-formulario{
+        padding: 0;
+    }
+    .contacto-horario{
+       padding-bottom: 1em;
     } */
+
+}
+
+@media(max-width: 480px) {
+    
+    .nosotros{
+        margin: 0 1%;
+    }
+    .cs-diferente-contenido{
+        /* width: 100%; */
+        display: flex;
+        flex-direction: column;
+        /* place-items: center; */
+        /* gap: 1em; */
+        margin-top: 2em;
+    }
+    .cs-diferente-lista{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* background-color: red; */
+    }
+    .cs-diferente-imagen{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* background-color: rosybrown; */
+    }
+    .cs-diferente-figure{
+        width: 200px;
+        height: 200px;
+    }
+    figure{
+        text-align: center;
+    }
 
     /* .contacto-detalle,
     .contacto-formulario{
@@ -443,4 +558,5 @@ footer{text-align: center; background: url(imagenes/bg.jpg); padding: 40px;
     /* .contacto-horario{
        padding-bottom: 1em;
     } */
+
 }
