--- a/style.css
+++ b/style.css
@@ -11,9 +11,10 @@
     --navbar-shallow-color:#e5e5e5;
     --menu-mobile-banckground-color:#3a4460;
 }
-
-body{font-family: 'Roboto', sans-serif;}
-
+body{
+    font-family: 'Roboto', sans-serif;
+}
+/*  */
 /* Menu */
 .menu .logo{
     color: white;
@@ -27,11 +28,12 @@ body{font-family: 'Roboto', sans-serif;}
 .menu ul li a{ font-size: 16px; padding: 8px 6px; text-decoration: none; color: white;}
 .menu ul li a:hover{ color: yellow;}
 .menu{ background-color: black;}
+/*  */
 /* Banner */
 .banner{
     width: 100%;
     position: relative;
-    height: 70vh;
+    height: 33vh;
     background: url('imagenes/silla.jpg') no-repeat center center/cover; 
     left: 0; top: 0;
     z-index: 1;
@@ -55,12 +57,18 @@ body{font-family: 'Roboto', sans-serif;}
 }
 .banner .texto_banner h1{ font-size: 40px;}
 .banner .texto_banner p{ font-size: 25px;}
+/*  */
+/* Generales */
 .titulo{ /* Unifica en estilo y tamaño todos la clase "titulo" del sitio */
     font-family: "Amaranth", sans-serif;
     letter-spacing: 1px;
     word-spacing: 3px;
-    font-size: 40px;
+    font-size: clamp(1.5rem, 2vw + 1rem, 5rem);
     text-align: center;
+    padding: 1rem;
+    display: flex;
+    align-items: end;
+    justify-content: center;
 }
 .linea{ /* Unifica en estilo y tamaño todos la clase "linea" del sitio */
     width: 200px;
@@ -69,21 +77,33 @@ body{font-family: 'Roboto', sans-serif;}
     margin: 10px auto 10px;
     border-radius: 5px;
     border-bottom: 30px;
+    /* margin-bottom: 2em; */
+    margin-bottom: 1rem;
 }
-iframe { /* Unifica en estilo y tamaño todos los iframe del sitio */
-    border-radius: 10px;
-    width: 75%;
-    height: 20em;
-    margin: 1em;
-}
-
+/*  */
 /* Quienes somos */
-.nosotros{ padding: 10px 300px; text-align: left; margin: 40px 0px;}
-.nosotros p{margin: 1em 1em 1em 1em;}
-.nosotros img{margin: 0 1em;}
+.nosotros{     
+    text-align: left;
+    margin: 0 10%;
+    padding: 30px 0 30px 0;
+    /* background: aquamarine; */
+}
+.nosotros p{
+    margin: 1em 1em 1em 1em;
+    text-align: justify; 
+    font-size: clamp(0.9em, 1vw + 0.3em, 3em);
+}
+.nosotros img{
+    margin: 0 1em;
+    padding: .5em;
+}
 .nosotros strong{font-weight: bold;}
 .nosotros em{font-style: italic;}
-.nosotros .utensilios{width: 120px; float: left; border-radius: 5px;}
+.nosotros .utensilios{
+    width: 120px;
+    float: left;
+    border-radius: 1em;
+}
 .nosotros .boton{
     background-color: #27668C;
     display: block;
@@ -100,61 +120,99 @@ iframe { /* Unifica en estilo y tamaño todos los iframe del sitio */
     margin-bottom: 20px;
 }
 .nosotros .boton:hover{background-color: #27668C; box-shadow: 5px 5px 5px gray;}
-
+/*  */
 /* Ubicacion y mapa */
-.ubicacion{ padding: 2em; background: linear-gradient(orange 25%, #888888); text-align: center;}
-.ubicacion p{margin: 0 0 1em;}
-
-/* Diferenciales */
-.diferenciales{padding: 1em; background: #888888;}
-.diferenciales .contenido{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    width: 100%;
-    height: auto;
-    place-items: center; 
-}
-.diferenciales .contenido .lista-diferenciales{
-    width: 90%;
-    height: 250px;
-    padding: 5px;
-    display: grid;
-    place-items: center;
-    justify-items: right;
-}
-.diferenciales .contenido .imagen-diferencial{
-    width: 90%;
-    height: 250px;
-    padding: 5px;
-    display: grid;
-    place-items: center;
-    justify-items: left;
+.ubicacion{ 
+    /* padding: 0em;  */
+    background: linear-gradient(orange 25%, #888888); 
     text-align: center;
+    padding: 30px 0 30px 0;
 }
-.diferenciales .contenido .imagen-diferencial img{
-    width: 200px;
-    height: 150px;
+.ubicacion p{
+    margin: 10px 10px 1em;
+}
+.cs-ubicacion-iframe{
+    border-radius: 20px;
+    max-width: 80%;
+    height: 20em;
+    margin: 30px 0;
+}
+/*  */
+/* Diferenciales */
+.cs-diferente{
+    background: #888888;
+    padding: 10px 0 30px 0;
+    /* background: rebeccapurple; */
+}
+.cs-diferente-contenido{
+    /* width: 80%; */
+    display: flex;
+    place-self: center;
+    /* gap: 1em; */
+    max-width: 100%;
+    /* background: #27668C; */
+    margin: 0 10%;
+}
+.cs-diferente-lista{
+    width: 100%;
+    /* display: flex; */
+    /* justify-content: flex-end; */
+    /* align-items: center; */
+    /* place-self: center; */
+    font-size: clamp(1em, 1vw + 0.1em, 3em);
+    background: #888888;
+}
+.cs-items{
+    line-height: 1.5;
+}
+.cs-items:first-child {font-weight: bold;}
+.cs-items:before{
+    content: "🟂"; 
+}
+.cs-diferente-imagen{    
+    width: 33vw;
+    max-width: 200px;
+    min-width: 100px;
+    text-align: center;
+    display: block;
+    margin: auto;
+    /* background: #f7c331; */
+}
+.cs-diferente-figure{
+    width: 100%;    
     border-radius: 10px;
     transition: 150ms;
     box-shadow: 5px 5px 100px olive;
+    
 }
-.lista-diferenciales .items{line-height: 2;}
-.lista-diferenciales .items:first-child {font-weight: bold;}
-.lista-diferenciales .items:before{content: "🟂"; margin-right: 5px;}
-.lista-diferenciales .imagen-diferencial-1:hover{opacity: 0.33;}
-
+.cs-diferente-figure:hover{opacity: 0.33;}
+/*  */
 /* Video */
-.video{background:#FFFFFF; text-align: center; padding: 4em;}
-
+.cs-diferente-video{
+    text-align: center;
+}
+.cs-diferente-iframe{
+    border-radius: 20px;
+    max-width: 80%;
+    height: 20em;
+    width: 100%;
+    margin: 30px 0;
+}
+/*  */
 /* Servicios Barberia */
+.servicios{
+    padding: 10px;
+    margin: 0;
+    padding: 0;
+    background: linear-gradient(white 50%, #f7c331);
+}
 .contenido{
     display: grid;
-    grid-template-columns: auto auto auto auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(max(200px, 30%), 1fr));
     gap: 20px;
     place-items: center;
     justify-self: center;
-    width: 100%;
-    margin:75px 0px 75px 0;
+    margin: 0 10%;
 }
 .contenido .imagen1,
 .contenido .imagen2,
@@ -181,66 +239,90 @@ iframe { /* Unifica en estilo y tamaño todos los iframe del sitio */
     color: white
 }
 .contenido .producto-descripcion{ font-size: 15px; height: 4em;}
-.producto-precio{ background: orange; text-align: right; margin: 7px; color: #888888;}
-.contenido .boton2{ background-color: #27668C; width: 100px; padding: 5px; color: white; border-radius: 10px; margin: auto;}
-
+.producto-precio{ 
+    background: orange; 
+    text-align: right; 
+    margin: 7px; 
+    color: #888888;}
+.contenido .boton2{ 
+    background-color: #27668C; 
+    width: 100px; 
+    padding: 5px; 
+    color: white; 
+    border-radius: 10px; 
+    margin: auto;
+}
+/*  */
 /* Contacto */
-.formulario-contacto{ margin: 50px 50px;}
-.contacto {
-    background-color: rgba(0, 0, 0, 0.4);
-    border-radius: 14px;
+.formulario-contacto{
+    background-color: #f7c331;
+    padding-bottom: 1em;
+    padding-top: 2em;
+} 
+.contacto-etiqueta{ 
+    font-weight: bold;
+    padding-bottom: 5px;
+}
+  .contacto-formulario textarea {
+    height: auto; 
+    resize: vertical;
+    background-color: #F2F3F4 ;
+    padding: 1em;
+}
+.contacto-formulario input {
+    background-color: #F2F3F4 ;
+    padding: 1em;
+}
+.contacto-formulario-grupo{
+    padding: 5px;
+}
+.contacto {         
+    border-radius: 1em;
     display: grid;
-    gap: 20px;
-    padding: 25px;
-    grid-template:
-    "contacto-titulo    contacto-titulo"
-    "contacto-detalle   contacto-formulario"
-    "contacto-horario   contacto-formulario" /
-         1fr                   1fr;  /*las dos columnas quedarian de igual ancho*/
+    grid-template-columns: repeat(auto-fit, minmax(max(300px, 30%), 1fr));
+    gap: 2em;     
+    margin: 0 10%;
+  }
+.contacto > *{ 
+    color: #F8F9F9;     
 }
-.contacto > *{ border-radius: 4px; padding: 5px; color: white;}
-.contacto-titulo { grid-area: contacto-titulo;}
-.contacto-detalle {
-    grid-area: contacto-detalle;
+.contacto-detalle {      
+     padding: 2em;
+    border: 2px solid #F8F9F9;
+    border-radius: 1em;
+     font-size: clamp(1em, 1vw + 0.3em, 3em);   
+}
+.contacto-formulario {     
+    padding: 2em;
+    border: 2px solid #F8F9F9;
+    border-radius: 1em;
+    grid-row: span 2 / span 2; 
+}
+.contacto-horario {  
+    padding-bottom: 1em;
+    border: 2px solid #F8F9F9;
+    border-radius: 1em;
+}
+.contacto-detalle-grupo{
+    padding: .5em;
+}
+.contacto-formulario-grupo{
     display: flex;
     flex-direction: column;
-    justify-items: left;
-}
-.contacto-etiqueta{ font-weight: bold;}
-.contacto-formulario {
-    grid-area: contacto-formulario;
-    display: flex;
-    flex-direction: column;
-    justify-items: left;
+    justify-content:space-between;
 }
 .contacto-formulario input,
 .contacto-formulario textarea {
     border-radius: 7px;
-    border: none;
+    border: none;  /*revisar este bloque con el siguiente al parecer llamamos al mismo elemento textarea*/
     height: 30px;
 }
-.contacto-formulario textarea {height: auto; resize: vertical;}
-.contacto-formulario-grupo,
-.contacto-detalle-grupo{
-    display: flex;
-    flex-direction: column;
-    justify-items: left;
-    margin: 5px;
+.contacto-formulario textarea {height: auto; resize: vertical;}  
+.cs-div-contacto-enviar{
+    text-align: center;
 }
-.contacto-horario { grid-area: contacto-horario;}
-/* Tabla */
-table{
-    border-collapse: collapse;
-    border-radius: 0.3em;
-    overflow: hidden;
-    justify-self: top;
-}
-thead{ border-collapse:collapse; background-color: rgba(247, 195, 49, 0.7);}
-thead th{ vertical-align: middle;}
-td{ padding: 5px;}
-tbody tr{cursor: pointer;}
-tbody tr:hover{ background: rgba(247, 195, 49, 0.3);}
-.contacto-enviar {
+.cs-btn-contacto-enviar{
+    margin-top: 10px;
     width: 50%;
     height: 50px;
     background-color: var(--secondary-color);
@@ -249,33 +331,67 @@ tbody tr:hover{ background: rgba(247, 195, 49, 0.3);}
     border: 1px solid var(--theme-color);
     font-size: 20px;
     cursor: pointer;
-    place-self: center;
 }
-.contacto-enviar:hover { box-shadow: 0 0 14px var(--secondary-color);}
+.cs-btn-contacto-enviar:hover { box-shadow: 0 0 14px var(--primary-color)}
+/*  */
+/* Tabla */
+table{
+    border-collapse: collapse;
+    border-radius: 0.3em;
+    overflow: hidden;
+    margin: auto;
+    width: 300px;
+    height: 5em;
+    font-size: clamp(1em, 1vw + 0.1em, 3em);
+}
+thead{ border-collapse:collapse; 
+    height: 2em;
+}
+thead th{ 
+    vertical-align: middle;
+}
+td{ 
+    padding: 5px;
+}
+tbody tr{
+    cursor: pointer;
+    
+}
+tbody tr:hover{ 
+    background: rgba(15, 15, 14, 0.3);
+}
 /* Fin Contato */
 
+/* FOOTER */
+footer{text-align: center; background: url(imagenes/bg.jpg); padding: 40px;
+    /* background: #CCCCCC; Personalmente me gusta este fondo de color */
+}
+.copyright{color:#FFFFFF; font-size: 13px; margin: 20px;}
+/* FIN Footer */
+
+
 /* Media Query */
-@media(max-width: 700px) {
+@media(max-width: 720px) {
     .hamburger{ width: 30px; position: absolute; top: 40px; transform: translateY(-50%);}
     .hamburger span{ margin-bottom: 3px; background-color: white; display: block; height: 3px;}
     .menu .logo{ margin-left: 50px;}
     menu{ position: relative;}
     nav ul{
         float: none;
-        width: 300px;
+        width: 175px;
         padding: 0;
         position: fixed;
         top: 0;
         bottom: 0;
         background-color: black;
         margin: 0px;
-        padding-top: 60px;
+        padding-top: 30px;
         transition: 1s;
         left: -100%;     
         z-index: 2;
     }
     .menu ul li{ display: block; float: none;}
-    .menu ul li a{ font-size: 18px; padding: 10px 40px;}
+    .menu ul li a{ font-size: 18px; padding: 10px 5px;}
     .open{ left: 0;}
     .close{
         display: block;
@@ -288,48 +404,43 @@ tbody tr:hover{ background: rgba(247, 195, 49, 0.3);}
         font-size: 30px;
         cursor: pointer;
     }
-    .contacto{
-        display: grid;
-        grid-template:
-        "contacto-titulo        contacto-titulo"
-        "contacto-detalle       contacto-detalle"
-        "contacto-formulario    contacto-formulario"
-        "contacto-horario       contacto-horario";
-    }
-    table{ margin: 0px auto;}
 }
-@media(max-width: 1024px) {
-    .servicios .contenido{ grid-template-columns: auto auto;}
-    .nosotros{ padding: 10px 100px;}
-    .contenido{ grid-template-columns: auto auto;}
-    .grid-container{ grid-template-columns: auto auto; }
-    /* Seccion Contactenos */
-    .contacto{
-        display: block;
-        /* revisar pues no creo que sea necesario pues el grid se presenta solo con dos columnas */
-        /* Asi como el bloque anterior podemos cambiar las dimensiones de los elementos como se requiera a los dispositivos moviles o de consulta */
+
+@media(max-width: 480px) {
+    
+    /* .nosotros{
+        margin: 0 1%;
     }
-    .contacto-titulo,
-    .contacto-detalle,
+    .cs-diferente-contenido{        
+        display: flex;
+        flex-direction: column;       
+        margin-top: 2em;
+    }
+    .cs-diferente-lista{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;    
+    }
+    .cs-diferente-imagen{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;        
+    }
+    .cs-diferente-figure{
+        width: 200px;
+        height: 200px;
+    }
+    figure{
+        text-align: center;
+    } */
+
+    /* .contacto-detalle,
     .contacto-formulario{
-        margin: 20px;
-    }
-    table{ margin: 0px auto; }
-}
-@media(max-width: 450px) {
-    .nosotros{ padding: 10px 10px; }
-    .servicios .contenido{ grid-template-columns: auto; }
-    .diferenciales .contenido{ grid-template-columns: auto;}
-    .contenido .imagen-diferencial{place-items: center;}
-    .contenido{ grid-template-columns: auto;}
-    .grid-container{ grid-template-columns: auto;}    
-    .contacto{
-        display: grid;
-        grid-template:
-        "contacto-titulo        contacto-titulo"
-        "contacto-detalle       contacto-detalle"
-        "contacto-formulario    contacto-formulario"
-        "contacto-horario       contacto-horario";
-    }
-    table{ margin: 0px auto; }
+        padding: 0;
+    } */
+    /* .contacto-horario{
+       padding-bottom: 1em;
+    } */
 }
