--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body{
 .banner{
     width: 100%;
     position: relative;
-    height: 33vh;
+    height: 50vh;
     background: url('imagenes/silla.jpg') no-repeat center center/cover; 
     left: 0; top: 0;
     z-index: 1;
@@ -44,7 +44,7 @@ body{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 40%;
+    min-width: 30%;
     min-height: 20%;
     border-radius: 20px;
     background-color: rgba(0, 0, 0, 0.5);
@@ -55,16 +55,19 @@ body{
     margin: 40px;
     text-align: center;
 }
-.banner .texto_banner h1{ font-size: 40px;}
-.banner .texto_banner p{ font-size: 25px;}
+.banner .texto_banner h1{ 
+    font-size: clamp(2em, 2vw + 0.9em, 6em);
+}
+.banner .texto_banner p{ 
+    font-size: clamp(1em, 1vw + 0.5em, 3em);
+}
 /*  */
 /* Generales */
 .titulo{ /* Unifica en estilo y tamaño todos la clase "titulo" del sitio */
     font-family: "Amaranth", sans-serif;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     word-spacing: 3px;
     font-size: clamp(1.5rem, 2vw + 1rem, 5rem);
-    text-align: center;
     padding: 1rem;
     display: flex;
     align-items: end;
@@ -76,10 +79,13 @@ body{
     background-color: #27668C;
     margin: 10px auto 10px;
     border-radius: 5px;
-    border-bottom: 30px;
-    /* margin-bottom: 2em; */
+    border-bottom: 20px;
     margin-bottom: 1rem;
 }
+
+
+
+
 /*  */
 /* Quienes somos */
 .nosotros{     
